Fixed the following issues. 1. Display blue screen lights, and ambient lights can be turned on even when there is not power to the aircraft. 2. Display backlights are visible even when the aircraft does not have sufficient electric power.

--- a/A32NX/html_ui/Pages/VCockpit/Instruments/Airliners/A320_Neo/EICAS/A320_Neo_EICAS.css
+++ b/A32NX/html_ui/Pages/VCockpit/Instruments/Airliners/A320_Neo/EICAS/A320_Neo_EICAS.css
@@ -17,7 +17,9 @@
 
 #Electricity {
   width: 100%;
-  height: 100%; }
+  height: 100%; 
+  background:radial-gradient(ellipse at center, rgba(13,20,35,1) 0%,rgba(13,20,35,1) 100%);
+  }
   #Electricity[state=off] {
     display: none; }
 
@@ -163,7 +165,6 @@ a320-neo-ecam-gauge {
 a320-neo-eicas-element {
   width: 100%;
   height: 100%;
-  background:radial-gradient(ellipse at center, rgba(13,20,35,1) 0%,rgba(13,20,35,1) 100%);
   font-family: Roboto-Bold;
   position: relative;
   overflow: hidden; }
