--- a/A32NX/html_ui/Pages/VCockpit/Instruments/Airliners/A320_Neo/MFD/A320_Neo_MFD.css
+++ b/A32NX/html_ui/Pages/VCockpit/Instruments/Airliners/A320_Neo/MFD/A320_Neo_MFD.css
@@ -56,12 +56,13 @@
   a320-neo-mfd-element {
     width: 100%;
     height: 100%;
-    background:radial-gradient(ellipse at center, rgba(13,20,35,1) 0%, rgba(13,20,35,1) 100%);
     font-family: Roboto-Bold;
     overflow: hidden; }
     a320-neo-mfd-element #Electricity {
       width: 100%;
-      height: 100%; }
+      height: 100%; 
+	  background:radial-gradient(ellipse at center, rgba(13,20,35,1) 0%, rgba(13,20,35,1) 100%);
+	  }
       a320-neo-mfd-element #Electricity[state=off] {
         display: none; }
     a320-neo-mfd-element #highlight {
